# moduleBox

./: .gitignore  .mcp.json  BUILDING.txt  CLAUDE.md  CMakeLists.txt  CMakeManifest.txt  COMPONENT_SKILL.md  CONSTITUTION.md  README.md  audio_streamer.py  build_log.txt  deploy.bat  partitions.csv  requirements.txt  script.env.cmd  sdkconfig  sdkconfig.defaults  sdkconfig.old  testManifest.json  tests.rar
.claude/agents/: audio-streaming.md  esp-idf-engineer.md  network-protocols.md  peripherals.md
bootld/: CMakeLists.txt  Makefile.env  partitions-8MB.csv  partitions-8MB.csv.old  script.env
bootld/bin2fw/: UPDATE.FW  bin2fw.c
bootld/boards/: CMakeLists.txt  boards.c  boards.h
bootld/sbin/: 0_menuconfig.sh  1_create_build.sh  2_build.sh  3_flash.sh  3_flash_all.sh
bootld/src/: CMakeLists.txt  aip.c  aip.h  main.c  update.h
bootldsd/: UPDATE(new).rar  UPDATE(old).rar  UPDATE.FW  bin2fw.c  readme.txt
bootldsd/bootldsd/: .cproject  .project  partitions-8MB.csv  sdkconfig.defaults
bootldsd/bootldsd_v2/: CMakeLists.txt  sdkconfig
components/: esp32-rotary-encoder.rar
components/3n_MOSFET/: 3n_MOSFET.c  CMakeLists.txt
components/CRSF/: CMakeLists.txt  CRSF.c
components/DendoStepper/: CMakeLists.txt  DendoStepper.c  DendoStepper.cpp
components/LAN/: .cproject  .project  CMakeLists.txt  LAN.c
components/PPM/: CMakeLists.txt  PPM.c
components/VESC/: CMakeLists.txt  VESC.c
components/WIFI/: .cproject  .project  CMakeLists.txt  WIFI.c
components/accel/: CMakeLists.txt  accel.c
components/accelStepper/: CMakeLists.txt  accelStepper.c
components/adc/: CMakeLists.txt  analog.c  tenzo_button.c
components/adc/include/: tenzo_button.h
components/arsenal/: CMakeLists.txt  strings.c
components/audioLAN/: CMakeLists.txt  audioLAN.c  rtp_client_stream.c
components/audioLAN/include/: rtp_client_stream.h
components/audioPlayer/: .cproject  .project  CMakeLists.txt  audioPlayer.c
components/audioPlayer/include/: audioPlayer.h
components/buttonLeds/: CMakeLists.txt  buttonLeds.c  button_led.c  button_ledBar.c  button_ledRing.c  button_logic.c  button_runFire.c  button_smartLed.c  button_swiperLed.c  led_types.c
components/buttonLeds/include/: buttonLeds.h  button_logic.h  led_types.h
components/buttonMatrix/: CMakeLists.txt  buttonMatrix.c
components/cybergear/: CMakeLists.txt  cybergear.c
components/disp_hd44780/: CMakeLists.txt  disp_hd44780.c
components/distanceSens/: CMakeLists.txt  distanceSens.c  distanceSens_benewake.c  distanceSens_common.c  distanceSens_hlk2410.c  distanceSens_sr04m.c  distanceSens_tofxxxf_uart.c
components/dwin/: CMakeLists.txt  dwin.c
components/encoders/: CMakeLists.txt  encoder_as5600.c  encoder_inc.c
components/esp32-rotary-encoder/: CMakeLists.txt  rotary_encoder.c
components/ftp/: .cproject  .project  CMakeLists.txt  ftp.c
components/hlk_sens/: CMakeLists.txt  hlk_sens.c
components/in_out/: CMakeLists.txt  in_out.c  inputs.c  outputs.c  tachometer.c
components/in_out/include/: in_out.h
components/leds/: .cproject  .project  CMakeLists.txt  leds.c  p9813.c
components/lidars/: CMakeLists.txt  lidars_common.c  lidars_rplidarS1.c
components/lidars/include/: lidars.h
components/manifest/: CMakeLists.txt  gen_manifest_modules.cmake  manifest.c
components/manifest/include/: manifest.h
components/max7219/: CMakeLists.txt  max7219.c  max7219_task.c
components/mb_oneWire/: CMakeLists.txt  mb_oneWire.c
components/me_slot_config/: ---in_out.c  .cproject  .project  3n_mosfet.c  CMakeLists.txt  TOFs.c  adc1.c  analog.c  buttonLed.c  buttonLed.c.with_gap  buttons.c  dwin_uart.c  encoders.c  executor.c  flywheel.c  in_out.c  me_slot_config.c  rfid.c  sensor_2ch.c  smartLed.c  st7789_display.c  stdcommand.c  stdreport.c  stepper.c  tachometer.c  tenzo_button.c  testsd.c  virtual_slots.c
components/me_slot_config/include/: ---in_out.h  3n_mosfet.h  TOFs.h  analog.h  buttonLed.h  buttons.h  dwin_uart.h  encoders.h  executor.h  flywheel.h  in_out.h  me_slot_config.h  rfid.h  sensor_2ch.h  smartLed.h  st7789_display.h  stdcommand.h  stdreport.h  stepper.h  tachometer.h  tenzo_button.h  virtual_slots.h
components/moduleboxapp/: CMakeLists.txt  moduleboxapp.c
components/myCDC/: .cproject  .project  CMakeLists.txt  (+1 more)
components/someUnique/: CMakeLists.txt  someUnique.c  testsd.c
components/someUnique/include/: someUnique.h  testsd.h
components/stepper/: CMakeLists.txt  asyncStepper.c  sCurveStepper.c  stepper.c  stepper_motor_encoder.c
components/stepper/include/: asyncStepper.h  sCurveStepper.h  stepper.h  stepper_motor_encoder.h
components/virtualSlots/: CMakeLists.txt  collector.c  conductor.c  counter.c  flywheel.c  masquerade.c  random.c  scaler.c  startup.c  tankControl.c  timer.c  virtualSlots.c  watchdog.c  whitelist.c
components/virtualSlots/include/: virtualSlots.h
components/wavPlayer/: CMakeLists.txt  wavPlayer.c  wav_handle.c
components/wavPlayer/include/: wavPlayer.h  wav_handle.h
docs/: IDF_5.5.4_NOTES.md  manifesto.txt
kb/: STRAP_JTAG_SEL.txt
main/: .cproject  CMakeLists.txt  idf_component.yml  main.c  manifest.c  manifest.h  mbdebug.h  mblog.c  me_debug.h  msc_disk.c  sd_card.c  sd_card.h  tusb_config.h  usb_descriptors.c
manifesto/: Makefile
micTest/: README.md  artifact_log_20260416_203856.txt  artifact_log_20260416_204012.txt  audio_artifact_detector.py  latency_log_20260416_201555.txt  latency_log_20260427_175051.txt  latency_log_20260427_180111.txt  latency_log_20260427_181934.txt  latency_log_20260427_183607.txt  latency_test.py  requirements.txt  stereo_sync_test.py  udp_audio_diag.py
partition_table/: partitionTable.csv
pyTest/: ftpUploadList.py  mqttTest.py  mqtt_broker_test.py  mqtt_extended_test.py  mqtt_quick_check.py  oom_run.out  oom_test.py  oscTest.py  osc_sender.py  slot_module_test.py  udpTest.py
sbin/: .USB_settings  0_addr2line.sh  1_create_build.cmd  1_create_build.sh  3_flash.sh  3_flash_all_but_storage.sh  9_send_udp_message.sh  wichbranch.sh
tests/: .gitignore  Makefile  mblog.c  options_parsing.c  stdcommands_unit.c  varfun.c
(+157 files in other folders)
